# CodingTool

./: README.md  colors.txt  main.py  resource_rc.py  resources.qrc  results_after_decoding.txt  results_after_encoding.txt  results_before_encoding.txt  status_after_errors_simulations.txt  status_after_fix_errors.txt  status_to_fix_errors_output.txt  test_file_updated.txt  ui_main.py  ui_main.ui  ui_splash_screen.py
algorithems/: ShiftedVTCode.py  deletions_reconstruction.py  insertions_reconstruction.py  main_rfc.py  test_encoder_decoder.py  test_insertion_deletion.py
algorithems/clustering-correcting-codes-master/: CMakeLists.txt  README.md  checkfunc.h  decoding_algorithim.h  decoding_results_after_clustring.txt  duplicateStrandWiteErrors.h  encoded_strand_binary.h  encoding_algorithim.h  errorCluster.h  files.h  generate_test.py  main  main.cpp  results_before_encoding.txt  status_after_errors_simulations.txt  status_after_fix_errors.txt  status_to_fix_errors_output.txt  strand.h  test_file.txt
algorithems/repeat-free-py-master/: LICENSE.md  README.md  test.py
algorithems/repeat-free-py-master/profiler/: profiler.pstats
algorithems/repeat-free-py-master/rip/: autoinc_queue.py  avl_rank.py  ds_tests.py  hashtable.py  linked_list.py
algorithms/: ShiftedVTCode.py  decoder.py  deletions_reconstruction.py  encoder.py  insertions_reconstruction.py  test_encoder_decoder.py  utils.py
algorithms/clustering-correcting-codes-master/: compile.bat
algorithms/clustering-correcting-codes-master/Algorithm Info/: Clustering-correcting codes.pptx
(+18 files in other folders)
